@@ -1,6 +1,6 @@
 FROM ysicing/debian AS getk8s
 
-ENV K8S_VER=v1.18.19
+ENV K8S_VER=v1.18.20
 
 RUN wget https://dl.k8s.io/$K8S_VER/kubernetes-server-linux-amd64.tar.gz && \
     tar zxf kubernetes-server-linux-amd64.tar.gz && \
@@ -14,6 +14,4 @@ FROM ysicing/debian
 
 COPY --from=getk8s /k7s/kubectl /usr/local/bin/
 
-ENTRYPOINT [ "kubectl" ]
-
-CMD [ "--help" ]
+CMD [ "kubectl", "--help" ]
