@@ -1,3 +1,0 @@
-#!/bin/bash
-
-docker pull ysicing/k7s
