@@ -1,3 +1,0 @@
-#!/bin/bash
-
-docker run --rm -v /root:/sysdir registry.cn-beijing.aliyuncs.com/k7scn/pkg:1.18.19 cp /kube.tgz /sysdir
