@@ -1,21 +1,17 @@
 #!/bin/bash
 
-# helm repo add stable http://mirror.azure.cn/kubernetes/charts/
-# helm repo add incubator http://mirror.azure.cn/kubernetes/charts-incubator/
-helm repo add nginx-stable https://helm.nginx.com/stable
-helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+# helm repo add nginx-stable https://helm.nginx.com/stable
+# helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
 helm repo add bitnami https://charts.bitnami.com/bitnami
-# helm repo add traefik https://containous.github.io/traefik-helm-chart
 helm repo add traefik https://helm.traefik.io/traefik
 helm repo add apphub https://apphub.aliyuncs.com
 helm repo add cockroachdb https://charts.cockroachdb.com/
 
 helm repo add jetstack https://charts.jetstack.io
-
 # https://docs.flagger.app/tutorials/nginx-progressive-delivery
 helm repo add flagger https://flagger.app
 # https://grafana.com/docs/loki/latest/installation/helm/
 helm repo add loki https://grafana.github.io/loki/charts
-helm repo add kuma https://kumahq.github.io/charts
+# helm repo add kuma https://kumahq.github.io/charts
 helm repo add longhorn https://charts.longhorn.io
 helm repo update
