@@ -1,3 +1,12 @@
+## 20210720
+- 移除k0s,k0sctl
+- 新增ergoget 下载kind,kubectl,k7s,pkg, 移除getkind, getk7s, getpkg
+- 新增k8e(k3s精简)
+- 更新helminit,默认注释掉`nginx`,`ingress-nginx`helm, 移除`kuma`helm
+- `ysicing/kubectl` 默认更新到v1.18.20
+- helm版本升级为3.6.3
+- istio版本升级到1.10.3
+
 ## 20210617
 - etcd版本升级为3.5.0
 - helm版本升级为3.6.1
